--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>EduResumo - Resumo e Rotina Escolar</title>
   <link rel="stylesheet" href="edu.css" />
+  <link rel="shortcut icon" href="imgs/icon.png" type="image/x-icon">
 </head>
 <body>
   <main class="container">
